--- a/project/package.json
+++ b/project/package.json
@@ -44,7 +44,9 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.4.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "~18.16.9",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
