--- a/project/apps/account/account.env.example
+++ b/project/apps/account/account.env.example
@@ -12,5 +12,5 @@ RABBIT_HOST=localhost
 RABBIT_PASSWORD=test
 RABBIT_PORT=5672
 RABBIT_USER=admin
-RABBIT_QUEUE=readme.notify.income
-RABBIT_EXCHANGE=readme.notify.income
+RABBIT_QUEUE=readme.notify
+RABBIT_EXCHANGE=readme.notify
