--- a/project/apps/notify/notife.env.example
+++ b/project/apps/notify/notife.env.example
@@ -10,5 +10,12 @@ RABBIT_HOST=localhost
 RABBIT_PASSWORD=test
 RABBIT_PORT=5672
 RABBIT_USER=admin
-RABBIT_QUEUE=readme.notify.income
+RABBIT_QUEUE=readme.notify
 RABBIT_EXCHANGE=readme.notify
+PORT=4000
+
+MAIL_SMTP_HOST='localhost'
+MAIL_SMTP_PORT=8025
+MAIL_USER_NAME='admin'
+MAIL_USER_PASSWORD='test'
+MAIL_FROM=artem@mail.ru
