--- a/project/package.json
+++ b/project/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^5.4.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
@@ -23,6 +24,7 @@
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.12",
     "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "mime-types": "^2.1.35",
     "mongoose": "^8.5.1",
@@ -69,5 +71,10 @@
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "webpack-cli": "^5.1.4"
+  },
+  "overrides": {
+    "@nestjs-modules/mailer": {
+      "mjml": "^5.0.0-alpha.4"
+    }
   }
 }
