--- a/project/apps/notify/docker-compose.dev.yml
+++ b/project/apps/notify/docker-compose.dev.yml
@@ -60,7 +60,7 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
       ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_USER}
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_PASSWORD}
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@readme.notify.mongodb:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@readme.notify.mongodb:${MONGO_PORT}/
 
 volumes:
   readme.notify.mongodb:
