Добавит обработчик создания новой публикации в блоге

--- a/project/apps/blog/blog.env.example
+++ b/project/apps/blog/blog.env.example
@@ -3,3 +3,4 @@ POSTGRES_PASSWORD=test
 POSTGRES_DB=readme_blog
 PGADMIN_DEFAULT_EMAIL=keks@htmlacademy.local
 PGADMIN_DEFAULT_PASSWORD=123456
+PORT=7000
