--- a/project/apps/blog/blog.env.example
+++ b/project/apps/blog/blog.env.example
@@ -4,3 +4,9 @@ POSTGRES_DB=readme_blog
 PGADMIN_DEFAULT_EMAIL=keks@htmlacademy.local
 PGADMIN_DEFAULT_PASSWORD=123456
 PORT=7000
+RABBIT_HOST=localhost
+RABBIT_PASSWORD=test
+RABBIT_PORT=5672
+RABBIT_USER=admin
+RABBIT_QUEUE=readme.notify
+RABBIT_EXCHANGE=readme.notify
