--- a/project/apps/account/project.json
+++ b/project/apps/account/project.json
@@ -5,6 +5,14 @@
   "projectType": "application",
   "tags": [],
   "targets": {
+    "build": {
+      "executor": "@nx/webpack:webpack",
+      "options": {
+        "webpackConfig": "apps/account/webpack.config.js",
+        "outputPath": "dist/apps/account",
+        "generatePackageJson": true
+      }
+    },
     "serve": {
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
